fixed the create event form and the spacing in the pages

--- a/app/assets/stylesheets/events/_events_index.scss
+++ b/app/assets/stylesheets/events/_events_index.scss
@@ -31,7 +31,7 @@
 .subcontainer {
   width: 95vw;
   margin: 0 auto;
-  height: 150vh;
+  height: 100vh;
   margin-top: 60px;
 }
 .infoboxno {
